--- a/app/assets/stylesheets/coworkings/_new_coworking.scss
+++ b/app/assets/stylesheets/coworkings/_new_coworking.scss
@@ -63,16 +63,44 @@
   }
 }
 
-// Checkboxes design
-.category-choices {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 20px 0;
-}
 
-.category-choice {
-  background: #b7b7b7;
+
+// wagon design
+// .form-post {
+//   background: white;
+//   margin-top: 50px;
+//   padding: 20px;
+//   border-radius: 5px;
+//   h1 {
+//     text-align: center;
+//     font-weight: bold;
+//     font-size: 25px;
+//     color: #666666;
+//     margin-bottom: 50px;
+//     margin-top: 0px;
+//   }
+//   .btn {
+//     width: 100%;
+//     padding: 10px;
+//     font-weight: bold;
+//   }
+// }
+
+// // Checkboxes design
+// .form-group {
+  .equipment-choices {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px 0;
+    label {
+      color: $my-white;
+      font-size: 10px;
+    }
+  }
+// }
+.equipment-choice {
+  background: $my-gray;
   padding: 20px;
   border-radius: 5px;
   opacity: .4;
@@ -83,7 +111,7 @@
     cursor: pointer;
   }
   &.active {
-  background: $brand-primary;
+  background: $my-green;
   color: white;
   opacity: 1;
   }
