--- a/app/views/coworkings/new.html.erb
+++ b/app/views/coworkings/new.html.erb
@@ -33,144 +33,144 @@
           <%= f.input :workstation_number, label: "Nombre de postes", placeholder: "250", hint: "Nous vous recommandons d'indiquerle nombre total de postes de travail installés" %>
         </div>
         </div>
-        <h2>Equipements</h2>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :tv, label: "Télevision", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-            <%= f.input :erp_room, label: "Salle ERP", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :auditorium, label: "Auditorium", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :kitchen, label: "Cuisine", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :nap_zone, label: "Espace repos", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :terrace, label: "Terrasse", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :internet, label: "Internet", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-            <%= f.input :photocopier, label: "Copieurs", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :shower, label: "Douches", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :locker, label: "Vestiaires", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :garden, label: "Jardin", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :rj45_socket, label: "Prise RJ45", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :optical_fiber, label: "Fibre optique", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-            <%= f.input :storage, label: "Stockage", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :furniture, label: "Mobilier", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :ohp, label: "rétro projecteur", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :phone, label: "Téléphones", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :cooling_system, label: "Air condtionné", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :alarm, label: "Alarme", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-            <%= f.input :computer, label: "Ordinateurs", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :waiting_room, label: "Salle d'attente", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :fax, label: "Fax", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :disabled_access, label: "Accés handicapé", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :bar, label: "Bar", as: :boolean %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="checkbox-new-coworking">
-            <div class="col-xs-3">
-              <%= f.input :lift, label: "Ascenseurs", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-            <%= f.input :common_space, label: "Espaces communs", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :local_bike, label: "Local vélos", as: :boolean %>
-            </div>
-            <div class="col-xs-3">
-              <%= f.input :parking, label: "Parkings", as: :boolean %>
-            </div>
-          </div>
-        </div>
-          <h2>Services</h2>
+        <h2>Equipements et services</h2>
             <div class="row">
               <div class="checkbox-new-coworking">
                 <div class="col-xs-3">
-                  <%= f.input :discretionnary_coffee, label: "Café à volonté", as: :boolean %>
+                  <%= f.input :tv, label: "Télevision", as: :boolean %>
                 </div>
                 <div class="col-xs-3">
-                <%= f.input :cleaning_service, label: "Service nettoyage", as: :boolean %>
+                <%= f.input :erp_room, label: "Salle ERP", as: :boolean %>
                 </div>
                 <div class="col-xs-3">
-                  <%= f.input :welcome_desk_service, label: "Réception / accueil", as: :boolean %>
+                  <%= f.input :auditorium, label: "Auditorium", as: :boolean %>
                 </div>
                 <div class="col-xs-3">
-                  <%= f.input :mail_management_service, label: "Gestion du courrier", as: :boolean %>
+                  <%= f.input :kitchen, label: "Cuisine", as: :boolean %>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="checkbox-new-coworking">
                 <div class="col-xs-3">
-                  <%= f.input :office_supplies, label: "Fournitures", as: :boolean %>
+                  <%= f.input :nap_zone, label: "Espace repos", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :terrace, label: "Terrasse", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :internet, label: "Internet", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                <%= f.input :photocopier, label: "Copieurs", as: :boolean %>
                 </div>
               </div>
             </div>
-            <h2>Description de l'espace</h2>
+            <div class="row">
+              <div class="checkbox-new-coworking">
+                <div class="col-xs-3">
+                  <%= f.input :shower, label: "Douches", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :locker, label: "Vestiaires", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :garden, label: "Jardin", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :rj45_socket, label: "Prise RJ45", as: :boolean %>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="checkbox-new-coworking">
+                <div class="col-xs-3">
+                  <%= f.input :optical_fiber, label: "Fibre optique", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                <%= f.input :storage, label: "Stockage", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :furniture, label: "Mobilier", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :ohp, label: "rétro projecteur", as: :boolean %>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="checkbox-new-coworking">
+                <div class="col-xs-3">
+                  <%= f.input :phone, label: "Téléphones", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :cooling_system, label: "Air condtionné", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :alarm, label: "Alarme", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                <%= f.input :computer, label: "Ordinateurs", as: :boolean %>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="checkbox-new-coworking">
+                <div class="col-xs-3">
+                  <%= f.input :waiting_room, label: "Salle d'attente", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :fax, label: "Fax", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :disabled_access, label: "Accés handicapé", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :bar, label: "Bar", as: :boolean %>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="checkbox-new-coworking">
+                <div class="col-xs-3">
+                  <%= f.input :lift, label: "Ascenseurs", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                <%= f.input :common_space, label: "Espaces communs", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :local_bike, label: "Local vélos", as: :boolean %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.input :parking, label: "Parkings", as: :boolean %>
+                </div>
+              </div>
+            </div>
+              <h2>Services</h2>
+                <div class="row">
+                  <div class="checkbox-new-coworking">
+                    <div class="col-xs-3">
+                      <%= f.input :discretionnary_coffee, label: "Café à volonté", as: :boolean %>
+                    </div>
+                    <div class="col-xs-3">
+                    <%= f.input :cleaning_service, label: "Service nettoyage", as: :boolean %>
+                    </div>
+                    <div class="col-xs-3">
+                      <%= f.input :welcome_desk_service, label: "Réception / accueil", as: :boolean %>
+                    </div>
+                    <div class="col-xs-3">
+                      <%= f.input :mail_management_service, label: "Gestion du courrier", as: :boolean %>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="checkbox-new-coworking">
+                    <div class="col-xs-3">
+                      <%= f.input :office_supplies, label: "Fournitures", as: :boolean %>
+                    </div>
+                  </div>
+                </div>
+        <h2>Description de l'espace</h2>
           <!-- Inject categories here -->
           <%= f.input :description, label: "Détails", placeholder: "Entièrement rénové avec une belle hauteur sous plafond...", hint: "Vous pouvez préciser d'autres services s'ils ne figurent pas dans les choix proposés. Nous vous conseillons de prendre le temps de décrire vos services. Vous pouvez faire la différence :)" %>
           <h2>Offres spéciales</h2>
