--- a/app/views/coworkings/index.html.erb
+++ b/app/views/coworkings/index.html.erb
@@ -1,2 +1,24 @@
 <h1>Coworkings#index</h1>
 <p>Find me in app/views/coworkings/index.html.erb</p>
+
+
+<div id="map" style="width: 400px; height: 200px;"></div>
+
+
+<% content_for(:after_js) do %>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
+    });
+  </script>
+<% end %>
