--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -78,7 +78,7 @@
       <div class="box-infos">
         <h1 class="highlight-coworking-show"><%= @coworking.title %></h1>
         <h3>Description</h3>
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @coworking.address %> - <%= @coworking.city %> - <%= @coworking.zip %></p>
+        <p><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @coworking.address %> - <%= @coworking.city %> - <%= @coworking.zip_code %></p>
         <p><i class="fa fa-building" aria-hidden="true"></i> <%= @coworking.surface %> m2</p>
         <p><i class="fa fa-desktop" aria-hidden="true"></i> <%= @coworking.workstation_number %> postes de travail</p>
         <p><%= @coworking.description %></p>
@@ -205,6 +205,35 @@
 </div>
 </div>
 
+<div id="map" style="width: 400px; height: 200px;"></div>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9zt6yDNWNCEE0d6P4c-Q4YpNYDwuPVI0&callback=initMap" type="text/javascript"></script>
+
+<% content_for(:after_js) do %>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
+    });
+  </script>
+<% end %>
+
+<% content_for(:after_js) do %>
+  <script>
+    $(document).ready(function() {
+      var coord = <%= raw @coworking_coordinates.to_json %>;
+      alert('Coworking coordinates are ' + coord.lat + ', ' + coord.lng);
+    });
+  </script>
+<% end %>
 
 
 
