--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -94,156 +94,32 @@
   }
 }
 
-// CSS animation for tagline V2
+.form-search-banner {
+  text-align: center;
+  // margin-top: 50px;
+}
 
-// .content {
-//   position: absolute;
-//   position: center;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   height: 80px;
-//   overflow:hidden;
-//   font-family: 'Montserrat', sans-serif;
-//   font-size: 35px;
-//   line-height: 50px;
-//   color: #ecf0f1;
+.search-query {
+   color: $my-green;
+   font-size: 12px;
+   padding-left: 5px;
+   border: 1px gray solid;
+   border-radius: 5px 0 0 5px;
+   height: 40px;
+   width: 300px;
+ }
 
-//   &__container {
-//     font-weight: 600;
-//     overflow: hidden;
-//     height: 80px;
-//     width: 900px;
-//     padding: 1px 1px;
-//     font-size: 31px;
-
-//     &:before {
-//       content: '[';
-//       left: 0;
-//     }
-
-//     &:after {
-//       content: ']';
-//       position: absolute;
-//       right: 0;
-//     }
-
-//     &:after, &:before {
-//       position: absolute;
-//       top: 0;
-
-//       color: $my-green;
-//       font-size: 45px;
-//       line-height: 40px;
-
-//       -webkit-animation-name: opacity;
-//       -webkit-animation-duration: 2s;
-//       -webkit-animation-iteration-count: infinite;
-//       animation-name: opacity;
-//       animation-duration: 2s;
-//       animation-iteration-count: infinite;
-//     }
-
-//     &__text {
-//       display: inline;
-//       float: center;
-
-//     }
-
-//     &__list {
-//       margin-top: 0;
-//       padding-left: 80px;
-//       text-align: right;
-//       list-style: none;
-
-//       -webkit-animation-name: change;
-//       -webkit-animation-duration: 10s;
-//       -webkit-animation-iteration-count: infinite;
-//       animation-name: change;
-//       animation-duration: 10s;
-//       animation-iteration-count: infinite;
-
-//       &__item {
-//         line-height:40px;
-//         margin:0;
-//       }
-//     }
-//   }
-// }
-
-
-// @-webkit-keyframes opacity {
-//   0%, 100% {opacity:0;}
-//   50% {opacity:1;}
-// }
-
-// @-webkit-keyframes change {
-//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
-//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
-//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
-//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
-// }
-
-// @-o-keyframes opacity {
-//   0%, 100% {opacity:0;}
-//   50% {opacity:1;}
-// }
-
-// @-o-keyframes change {
-//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
-//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
-//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
-//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
-// }
-
-// @-moz-keyframes opacity {
-//   0%, 100% {opacity:0;}
-//   50% {opacity:1;}
-// }
-
-// @-moz-keyframes change {
-//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
-//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
-//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
-//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
-// }
-
-// @keyframes opacity {
-//   0%, 100% {opacity:0;}
-//   50% {opacity:1;}
-// }
-
-// @keyframes change {
-//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
-//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
-//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
-//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
-// }
-
-// 6 is the number of animation.
-// Here, there are 4 lines :
-
-// 1 to 2
-// 2 to 3
-// 3 to 4
-// 4 to 3
-// 3 to 2
-// 2 to 1
-
-// 6x + 6y = 100 (100% duration)
-
-// HERE :
-// y = 4 -> Animation between two lines
-// x = 12.66 -> Time spent on a line
-
-// You can define a value and calculate the other if you want change speed or the number of lines
-
-// Animation text tagline V2
-
+ .btn-search {
+  background-color: #29AB87;
+  border-color: #29AB87;
+  font-size: 12px;
+  width: auto;
+  height: 40px;
+  padding: 0px 25px;
+  border: 1px gray solid;
+  border-radius: 0 5px 5px 0;
+  font-family: "Montserrat", "sans-serif";
+  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
