--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,6 +52,7 @@ border-radius: 5px;
   border-color: $my-green;
   font-size: 12px;
   width: auto;
+  position: relative;
   padding: 15px 25px;
   margin-bottom: 50px;
   margin-top: 50px;
