--- a/app/views/coworkings/index.html.erb
+++ b/app/views/coworkings/index.html.erb
@@ -1,9 +1,20 @@
-<h1>Coworkings#index</h1>
-<p>Find me in app/views/coworkings/index.html.erb</p>
+<div class="container-coworking-index">
+  <div class="row">
+    <div class="col-xs-12 col-md-7">
+    <div id="" style="overflow:scroll; height:100vh;">
+        <% @coworkings.each do |coworking| %>
+        <div class="col-xs-12 col-md-6">
+          <%= render 'card', coworking: coworking, image_url: cl_image_path(coworking.photos.first.path, aspect_ratio: 4, crop: :crop)  %>
+        </div>
+        <% end %>
+    </div>
+  </div>
 
-
-<div id="map" style="width: 400px; height: 200px;"></div>
-
+    <div class="col-xs-12 col-md-5">
+      <div id="map"></div>
+    </div>
+  </div>
+</div>
 
 <% content_for(:after_js) do %>
   <script type="text/javascript">
