--- a/app/views/demands/edit.html.erb
+++ b/app/views/demands/edit.html.erb
@@ -5,30 +5,68 @@
 <br>
 <div class="container demand-container">
   <div class="raw">
-    <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3 col-sm-offset-3">
-      <div class="form-login">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+      <div class="form-demand-new">
         <%= simple_form_for @demand do |f| %>
-        <%= f.label "Que souhaitez-vous faire ?" %>
-        <%= f.input :lease, as: :boolean, label: "Louer" %>
-        <%= f.input :buy, as: :boolean, label: "Acheter" %>
-        <%= f.hint "Cochez les deux cases si vous n'avez pas encore décidé de votre stratégie" %>
-        <%= f.input :company_name, placeholder: "Ma société", label: "Quel est le nom de votre société ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
-        <%= f.input :lease_budget, placeholder: "150 000", label: "En cas de location, quel est votre budget maximum annuel hors charges et taxes (HC HT) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
-        <%= f.input :buy_budget, placeholder: "1 200 000", label: "En cas d'achat, quel est votre budget hors droits (HD) (environ 8% du prix d'achat) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
-        <%= f.label "Où souhaitez-vous vous implanter ?" %>
-        <%= f.input :location_1, label: "Je veux être absolument dans ces quartiers...", collection: Demand::ZONE, error: "Merci de remplir ce champs pour valider le formulaire" %>
-        <%= f.input :location_2, label: "...dans ces quartiers pourquoi pas...", collection: Demand::ZONE %>
-        <%= f.input :location_3, label: "...mais regardons un peu plus large.", collection: Demand::ZONE %>
-        <%= f.input :surface, label: "Quelle surface recherchez-vous ?", error: "Merci de remplir ce champs pour valider le formulaire", placeholder: "500", hint: "La surface SUBL (Surface Utile Brute Locative) représente l'espace comprenant les postes de travail, les salles de réunions, les espaces communs, etc.)." %>
-        <%= f.input :workstation_number, label: "De combien de postes de travail avez-vous besoin ?", placeholder: "45", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Un poste de travail représente le bureau d'un collaborateur. Vous pouvez avoir moins de postes que le nombre d'employés (dans le cas d'une politique de bureaux non attribués par exemple)." %>
-        <%= f.input :meeting_room_number, label: "De combien de salles de réunions avez-vous besoin ?", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal, nous ajusterons par la suite la taille des salles dont vous avez besoin pour organiser vos réunions. Ou laissez blanc si vous n'en avez pas besoin." %>
-        <%= f.input :parking_number, label: "De combien de places de parking avez-vous besoin ?", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal ou laissez blanc si vous n'en avez pas l'utilité." %>
-        <%= f.input :surface_type, label: "Quel type de surface recherchez-vous ?", collection: Demand::SPACES, error: "Merci de remplir ce champs pour valider le formulaire", hint: "Merci d'indiquer votre préférence." %>
-        <!-- simple form date input/no date picker -->
-        <%= f.input :move_in_date, label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
-        <%= f.input :other_spec, label: "Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
-        <%= f.submit "Mettre à jour mon cahier des charges", class: "btn btn-primary btn-block" %>
-        <% end %>
+                <%= f.input :company_name, placeholder: "Ma société", label: "Quel est le nom de votre société ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+                    <h2>Que souhaitez-vous faire ?</h2>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <%= f.input :lease, as: :boolean, label: "Louer" %>
+                  </div>
+                  <div class="col-xs-6">
+                    <%= f.input :buy, as: :boolean, label: "Acheter" %>
+                  </div>
+                  <%= f.hint "Cochez les deux cases si vous n'avez pas encore décidé de votre stratégie" %>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                  <%= f.input :lease_budget, placeholder: "150 000", label: "Budget locatif maximum annuel hors charges et taxes (HC HT) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+                  </div>
+                  <div class="col-xs-6">
+                  <%= f.input :buy_budget, placeholder: "1 200 000", label: "Budget acquisition hors droits (HD) (environ 8% du prix d'achat) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+                  </div>
+                </div>
+                <h2>Où souhaitez-vous vous implanter ?</h2>
+                <div class="row">
+                  <div class="col-xs-4">
+                    <%= f.input :location_1, label: "Choix n°1", prompt: "Où ?", collection: Demand::ZONE, error: "Merci de remplir ce champs pour valider le formulaire" %>
+                  </div>
+                  <div class="col-xs-4">
+                    <%= f.input :location_2, label: "Choix n°2", collection: Demand::ZONE %>
+                  </div>
+                  <div class="col-xs-4">
+                    <%= f.input :location_3, label: "Choix n°3", collection: Demand::ZONE %>
+                  </div>
+                    <%= f.hint "Merci d'indiquer au moins un choix - choix n°1" %>
+                </div>
+                <h2>Informations générales</h2>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <%= f.input :surface, label: "Surface", error: "Merci de remplir ce champs pour valider le formulaire", placeholder: "500", hint: "La surface SUBL (Surface Utile Brute Locative) représente l'espace comprenant les postes de travail, les salles de réunions, les espaces communs, etc.)." %>
+                  </div>
+                  <div class="col-xs-6">
+                    <%= f.input :workstation_number, label: "Nombre de postes de travail", placeholder: "35", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Un poste de travail représente le bureau d'un collaborateur. Vous pouvez avoir moins de postes que le nombre d'employés (dans le cas d'une politique de bureaux non attribués par exemple)." %>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <%= f.input :meeting_room_number, label: "Nombre de salles de réunion", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal, nous ajusterons par la suite la taille des salles dont vous avez besoin pour organiser vos réunions. Ou laissez blanc si vous n'en avez pas besoin." %>
+                  </div>
+                  <div class="col-xs-6">
+                    <%= f.input :parking_number, label: "Nombre de parking", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal ou laissez blanc si vous n'en avez pas l'utilité." %>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12">
+                    <%= f.input :surface_type, label: "Quel type de surface recherchez-vous ?", collection: Demand::SPACES, error: "Merci de remplir ce champs pour valider le formulaire", hint: "Merci d'indiquer votre préférence." %>
+                  </div>
+                </div>
+                <%= f.input :move_in_date, label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
+                <h2>Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?</h2>
+                <%= f.input :other_spec, label: "Détails", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
+                <%= f.submit "Mettre à jour mon cahier des charges", class: "btn btn-primary btn-block" %>
+                <% end %>
       </div>
     </div>
   </div>
