--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -11,21 +11,43 @@
               Le guide qui accompagne les <span class="color-animation"></span> <br> dans leur recherche de <em class="color-animation"></em>
             </p>
           </div>
+
+
+<!--           <%#= simple_form_for :coworking, :method => 'get',
+              :html => { :class => 'form-search-banner' }, url: coworkings_path do |f| %>
+            <%#= f.input_field :search, placeholder: "Où rêvez-vous de travailler ? ",
+                class: "search-query" %>
+            <%#= f.submit "Rechecher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
+          <%# end %>
+ -->
+
+          <form class="simple_form form-search-banner" novalidate="novalidate" action="/coworkings" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="✓">
+                      <input class="string required search-query" placeholder="Où rêvez-vous de travailler ? " type="text" name="coworking[address]" id="coworking_address">
+                      <input type="submit" name="commit" value="Rechecher" class="btn btn-primary btn-search" style="text-decoration:none" data-disable-with="Rechecher">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
           <%# if user_signed_in? %>
-          <%= link_to new_demand_path, method: :get, class: 'form-search' do %>
-          <div class="flexbox">
-            <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+
+          <%#= link_to new_demand_path, method: :get, class: 'form-search' do %>
+        <!--   <div class="flexbox">
+            <%#= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
           </div>
-          <% end %>
+          <%# end %> -->
           <%# else %>
+
+
           <%#= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
           <!-- <div class="flexbox">
             <%#= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
           </div> -->
           <%# end %>
           <%# end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
